# dryerfox

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/scripts/: stamp-version.mjs
.github/workflows/: release.yml
src/: index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: README.md
